# mnemoria

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  opencode.json
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: api_perf.rs  model_comparison.rs
src/: constants.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: mod.rs
src/embeddings/: mod.rs
src/search/: mod.rs
src/storage/: file_lock.rs  log_reader.rs  log_writer.rs  manifest.rs  mod.rs
